# bzip2

./: .gitignore  LICENSE  Makefile  README.md  bits.py  main.py  pyproject.toml  requirements.dev.txt
app/: bits.py  bzip2.py  main.py  packager.py
app/transformations/: __init__.py  bits.py  bwt.py  hf_tree.py  hfc.py  identity.py  mtf.py  rle.py  transform.py
app/transformations/bwt/: README.md  bwt.py
app/transformations/hfc/: README.md  bits.py  hf_tree.py  hfc.py
app/transformations/mtf/: README.md  mtf.py
app/transformations/rle/: README.md  __init__.py  rle.py  rle_packbits.py  rle_pairs.py  rle_streams.py
tests/: conftest.py  helpers.py
tests/integration/: test_bzip2.py
tests/unit/: test_.py  test_bits.py  test_packager.py  test_rle_streams.py
transformations/: bwt.py  hf_tree.py  hfc.py  mtf.py  rle.py  transform.py
